--- a/HomeApps/Views/Miles/Create.cshtml
+++ b/HomeApps/Views/Miles/Create.cshtml
@@ -48,7 +48,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.TotalPrice, htmlAttributes: new { @class = "control-label col-md-3" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.TotalPrice, new { htmlAttributes = new { @class = "form-control", type = "number", step = "0.01" } })
+                @Html.EditorFor(model => model.TotalPrice, new { htmlAttributes = new { @class = "form-control", type = "number", step = "0.01", @autocomplete = "off" } })
                 @Html.ValidationMessageFor(model => model.TotalPrice, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -56,7 +56,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.TotalGallons, htmlAttributes: new { @class = "control-label col-md-3" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.TotalGallons, new { htmlAttributes = new { @class = "form-control", type = "number", step = "0.001" } })
+                @Html.EditorFor(model => model.TotalGallons, new { htmlAttributes = new { @class = "form-control", type = "number", step = "0.001", @autocomplete = "off" } })
                 @Html.ValidationMessageFor(model => model.TotalGallons, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -64,7 +64,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.TotalMilesDriven, htmlAttributes: new { @class = "control-label col-md-3" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.TotalMilesDriven, new { htmlAttributes = new { @class = "form-control", type = "number", step = "0.01" } })
+                @Html.EditorFor(model => model.TotalMilesDriven, new { htmlAttributes = new { @class = "form-control", type = "number", step = "0.01", @autocomplete = "off" } })
                 @Html.ValidationMessageFor(model => model.TotalMilesDriven, "", new { @class = "text-danger" })
             </div>
         </div>
