--- a/HomeApps/Views/Shared/_GasLayout.cshtml
+++ b/HomeApps/Views/Shared/_GasLayout.cshtml
@@ -18,7 +18,7 @@
 
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <a class="navbar-brand" href="/">Home Apps</a>
+        @Html.ActionLink("Home Apps", "Index", "AppList", null, new { @class = "navbar-brand" })
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -26,10 +26,13 @@
         <div class="collapse navbar-collapse" id="navbarColor01">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    @Html.ActionLink("Gas", "Index", "Autos", null, new { @class = "nav-link" })
+                    @Html.ActionLink("Add Gas", "Index", "Autos", null, new { @class = "nav-link" })
                 </li>
                 <li class="nav-item">
                     @Html.ActionLink("Stations", "Index", "Stations", null, new { @class = "nav-link" })
+                </li>
+                <li class="nav-item">
+                    @Html.ActionLink("Autos", "Index", "Autos", null, new { @class = "nav-link" })
                 </li>
                 @*<li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
