--- a/HomeApps/Views/WeightTrackers/Create.cshtml
+++ b/HomeApps/Views/WeightTrackers/Create.cshtml
@@ -19,7 +19,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.WeightAmout, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.WeightAmout, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.EditorFor(model => model.WeightAmout, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
             @Html.ValidationMessageFor(model => model.WeightAmout, "", new { @class = "text-danger" })
         </div>
     </div>
