--- a/HomeApps/Views/Shared/_GrocerieLayouts.cshtml
+++ b/HomeApps/Views/Shared/_GrocerieLayouts.cshtml
@@ -24,7 +24,7 @@
 
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        @Html.ActionLink("Home Apps", "Index", "AppList", null, new { @class = "navbar-brand" })
+        @Html.ActionLink("Home App", "AppList", "Home", null, new { @class = "navbar-brand" })
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
