--- a/HomeApps/Views/Shared/_MateLayout.cshtml
+++ b/HomeApps/Views/Shared/_MateLayout.cshtml
@@ -18,7 +18,7 @@
 
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <a class="navbar-brand" href="/">Home App</a>
+        @Html.ActionLink("Home App", "AppList", "Home", null, new { @class = "navbar-brand" })
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
