--- a/HomeApps/Views/GroceriesItemLists/ShowAllItems.cshtml
+++ b/HomeApps/Views/GroceriesItemLists/ShowAllItems.cshtml
@@ -8,7 +8,7 @@
 <h2>All Items</h2>
 
 <p>
-    @Html.ActionLink("Need Items", "Index")
+    @Html.ActionLink("Grocery List", "Index")
 </p>
 
 <table id="ItemList" class="display">
