--- a/HomeApps/Views/GroceriesItems/Index.cshtml
+++ b/HomeApps/Views/GroceriesItems/Index.cshtml
@@ -8,8 +8,9 @@
 <h2>Index</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Create New", "Create")  -  @Html.ActionLink("Grocery List", "Index", "GroceriesItemLists", null,null)
 </p>
+
 <table class="table">
     <tr>
         <th>
