--- a/HomeApps/Views/GroceriesItemLists/Create.cshtml
+++ b/HomeApps/Views/GroceriesItemLists/Create.cshtml
@@ -49,6 +49,13 @@
         </div>
     </div>
 
+    <div class="form-group">
+        @Html.Label("Notes", htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.Notes, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.Notes, "", new { @class = "text-danger" })
+        </div>
+    </div>
 
 
     <div class="form-group">
