Fixed button CSS issue. Change lables on chores.

--- a/HomeApps/Views/Miles/Create.cshtml
+++ b/HomeApps/Views/Miles/Create.cshtml
@@ -86,7 +86,7 @@
             @Html.Label("New Station: ")
             @Html.TextBox("NewStationName")
             <br />
-            <input type="button" value="Add Station" style="width:100%;align-content:center" id="AddStation" class="btn-default" />
+            <input type="button" value="Add Station" style="width:100%;align-content:center" id="AddStation" class="btn-primary" />
         </div>
     </div>
 
