--- a/HomeApps/Views/UsersChores/Create.cshtml
+++ b/HomeApps/Views/UsersChores/Create.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_ChorsesLayout.cshtml";
 }
 
-<h2>Create</h2>
+<h2>Create Chore For Person</h2>
 
 
 @using (Html.BeginForm()) 
@@ -13,11 +13,11 @@
     @Html.AntiForgeryToken()
     
 <div class="form-horizontal">
-    <h4>UsersChore</h4>
+    <h4></h4>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <div class="form-group">
-        @Html.LabelFor(model => model.UserID, "UserID", htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.Label("Person", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.DropDownList("UserID", null, htmlAttributes: new { @class = "form-control" })
             @Html.ValidationMessageFor(model => model.UserID, "", new { @class = "text-danger" })
@@ -25,7 +25,7 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.ChoreID, "ChoreID", htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.Label("Chore", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.DropDownList("ChoreID", null, htmlAttributes: new { @class = "form-control" })
             @Html.ValidationMessageFor(model => model.ChoreID, "", new { @class = "text-danger" })
@@ -33,7 +33,7 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.ChoreTimeTypeID, "ChoreTimeTypeID", htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.Label("Chore Amount", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.DropDownList("ChoreTimeTypeID", null, htmlAttributes: new { @class = "form-control" })
             @Html.ValidationMessageFor(model => model.ChoreTimeTypeID, "", new { @class = "text-danger" })
@@ -41,7 +41,7 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.ChoreDayTimeTypeID, "ChoreDayTimeTypeID", htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.Label("Time Of Day", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.DropDownList("ChoreDayTimeTypeID", null, htmlAttributes: new { @class = "form-control" })
             @Html.ValidationMessageFor(model => model.ChoreDayTimeTypeID, "", new { @class = "text-danger" })
@@ -49,7 +49,7 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.StartDateChore, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.Label("Start Date", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.StartDateChore, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.StartDateChore, "", new { @class = "text-danger" })
@@ -59,7 +59,7 @@
 
 
     <div class="form-group">
-        @Html.LabelFor(model => model.EndDateChore, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.Label("End Date", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.EndDateChore, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.EndDateChore, "", new { @class = "text-danger" })
@@ -68,7 +68,7 @@
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Create" class="btn btn-default" />
+            <input type="submit" value="Create" class="btn btn-primary" />
         </div>
     </div>
 </div>
