--- a/HomeApps/Views/UsersChores/Edit.cshtml
+++ b/HomeApps/Views/UsersChores/Edit.cshtml
@@ -19,7 +19,7 @@
     @Html.HiddenFor(model => model.UserChoreID)
 
     <div class="form-group">
-        @Html.LabelFor(model => model.UserID, "UserID", htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.Label("Person", "UserID", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.DropDownList("UserID", null, htmlAttributes: new { @class = "form-control" })
             @Html.ValidationMessageFor(model => model.UserID, "", new { @class = "text-danger" })
@@ -27,7 +27,7 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.ChoreID, "ChoreID", htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.Label("Chore", "ChoreID", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.DropDownList("ChoreID", null, htmlAttributes: new { @class = "form-control" })
             @Html.ValidationMessageFor(model => model.ChoreID, "", new { @class = "text-danger" })
@@ -35,17 +35,7 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.IsDeleted, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            <div class="checkbox">
-                @Html.EditorFor(model => model.IsDeleted)
-                @Html.ValidationMessageFor(model => model.IsDeleted, "", new { @class = "text-danger" })
-            </div>
-        </div>
-    </div>
-
-    <div class="form-group">
-        @Html.LabelFor(model => model.ChoreTimeTypeID, "ChoreTimeTypeID", htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.Label("Chore Time", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.DropDownList("ChoreTimeTypeID", null, htmlAttributes: new { @class = "form-control" })
             @Html.ValidationMessageFor(model => model.ChoreTimeTypeID, "", new { @class = "text-danger" })
@@ -54,16 +44,16 @@
 
 
     <div class="form-group">
-        @Html.LabelFor(model => model.ChoreDayTimeID, "ChoreDayTimeID", htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.Label("Chore Day Type", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.DropDownList("ChoreDayTimeID", null, htmlAttributes: new { @class = "form-control" })
-            @Html.ValidationMessageFor(model => model.ChoreDayTimeID, "", new { @class = "text-danger" })
+            @Html.DropDownList("ChoreDayTimeTypeID", null, htmlAttributes: new { @class = "form-control" })
+            @Html.ValidationMessageFor(model => model.ChoreDayTimeTypeID, "", new { @class = "text-danger" })
         </div>
     </div>
 
 
     <div class="form-group">
-        @Html.LabelFor(model => model.StartDateChore, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.Label("Start Chore Date", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.StartDateChore, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.StartDateChore, "", new { @class = "text-danger" })
@@ -71,17 +61,7 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.IsDone, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            <div class="checkbox">
-                @Html.EditorFor(model => model.IsDone)
-                @Html.ValidationMessageFor(model => model.IsDone, "", new { @class = "text-danger" })
-            </div>
-        </div>
-    </div>
-
-    <div class="form-group">
-        @Html.LabelFor(model => model.EndDateChore, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.Label("End Chore Date", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.EndDateChore, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.EndDateChore, "", new { @class = "text-danger" })
@@ -89,8 +69,30 @@
     </div>
 
     <div class="form-group">
+        
+        <div class="col-md-10">
+            <div class="checkbox">
+                @Html.Label("Done?", htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.EditorFor(model => model.IsDone)
+                @Html.ValidationMessageFor(model => model.IsDone, "", new { @class = "text-danger" })
+            </div>
+        </div>
+    </div>
+
+    <div class="form-group">
+        
+        <div class="col-md-10">
+            <div class="checkbox">
+                @Html.Label("Delete?", htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.EditorFor(model => model.IsDeleted)
+                @Html.ValidationMessageFor(model => model.IsDeleted, "", new { @class = "text-danger" })
+            </div>
+        </div>
+    </div>
+
+    <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Save" class="btn btn-default" />
+            <input type="submit" value="Save" class="btn btn-primary" />
         </div>
     </div>
 </div>
