--- a/HomeApps/Views/GroceriesItems/Create.cshtml
+++ b/HomeApps/Views/GroceriesItems/Create.cshtml
@@ -43,7 +43,13 @@
         </div>
     </div>
 
-
+    <div class="form-group">
+        @Html.Label("Kids Still Like", htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.CheckBoxFor(model => model.KidsStillLike, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.KidsStillLike, "", new { @class = "text-danger" })
+        </div>
+    </div>
 
 
     <div class="form-group">
