--- a/HomeApps/Views/WeightTrackers/Edit.cshtml
+++ b/HomeApps/Views/WeightTrackers/Edit.cshtml
@@ -28,6 +28,14 @@
     </div>
 
     <div class="form-group">
+        @Html.LabelFor(model => model.WistSize, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.WistSize, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.WistSize, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group">
         @Html.LabelFor(model => model.WeightData, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.WeightData, new { htmlAttributes = new { @class = "form-control" } })
