--- a/HomeApps/Views/WeightTrackers/Index.cshtml
+++ b/HomeApps/Views/WeightTrackers/Index.cshtml
@@ -19,7 +19,7 @@
 <table class="table">
     <tr>
         <th style="text-align:center">
-            @Html.DisplayName("Weight") - @Html.DisplayName("Date")
+            @Html.DisplayName("Weight") - @Html.DisplayName("Date") - @Html.DisplayName("Wist")
         </th>
         <th></th>
     </tr>
@@ -28,8 +28,13 @@
     <tr>
         <td style="text-align:center">
             @Html.ActionLink(@item.WeightAmout.ToString(), "Edit", new { id = item.WeightID }) -  @Html.Label(item.WeightData?.ToString("MM/dd/yyyy"))
-            @if (item.Notes != null) {
-                <br/> @item.Notes
+            @if (item.WistSize != null)
+            {
+                <span>- @item.WistSize</span>
+            }
+            @if (item.Notes != null)
+            {
+                <br /> @item.Notes
             }
         </td>
         <td>
